--- a/Fragmentos/app/src/main/res/layout/activity_main.xml
+++ b/Fragmentos/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,25 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Opcion 1"
-        android:textSize="30sp" />
+        android:text="@string/buttonOpcionUno_Text"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonOpcionDos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Opcion 2"
-        android:textSize="30sp" />
+        android:text="@string/buttonOpcionDos_Text"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonOpcionTres"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Opcion 3"
-        android:textSize="30sp" />
+        android:text="@string/buttonOpcionTres_Text"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </LinearLayout>
