--- a/Fragmetos_Estaticos/app/src/main/res/layout/fragment_blank.xml
+++ b/Fragmetos_Estaticos/app/src/main/res/layout/fragment_blank.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".BlankFragment">
 
     <Button
         android:id="@+id/buttonOpcionUno"
@@ -30,4 +32,4 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</FrameLayout>
