--- a/Calculadora/app/src/main/res/layout-land/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout-land/activity_main.xml
@@ -63,50 +63,51 @@
 
         <Button
             android:id="@+id/buttonOperadorParIzquierdo"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorParIzquierdo_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorParIzquierdo_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorParDerecho"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorParDerecho_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorParDerecho_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
+
         <Button
             android:id="@+id/buttonOperadorDivision"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorDivisio_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorDivisio_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorClear"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorClear_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorClear_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -150,51 +151,54 @@
             android:text="@string/buttonDigito6_Text"
             android:textColor="@android:color/white"
             android:textSize="@dimen/textSize_Digito" />
+
         <Button
             android:id="@+id/buttonOperadorSeno"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorSeno_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorSeno_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
+
         <Button
             android:id="@+id/buttonOperadorCoseno"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorCoseno_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorCoseno_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
+
         <Button
             android:id="@+id/buttonOperadorMultiplicacion"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorMultiplicacion_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorMultiplicacion_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorPotencia"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorExponente_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorExponente_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -238,52 +242,54 @@
             android:text="@string/buttonDigito3_Text"
             android:textColor="@android:color/white"
             android:textSize="@dimen/textSize_Digito" />
+
         <Button
             android:id="@+id/buttonOperadorSecante"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorSecante_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorSecante_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorCosecante"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorCosecante_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorCosecante_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
+
         <Button
             android:id="@+id/buttonOperadorResta"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorRestar_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorRestar_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorSuma"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorSumar_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorSumar_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -306,39 +312,28 @@
 
         <Button
             android:id="@+id/buttonDigitoPunto"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="."
-            android:textSize="@dimen/textSize_Digito"
             android:background="@color/colorDigitos"
+            android:onClick="onClick"
+            android:text="."
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Digito" />
 
-        <Button
-            android:id="@+id/buttonRaiz"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="$"
-            android:textSize="@dimen/textSize_Digito"
-            android:background="@color/colodOperadores"
-            android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
 
         <Button
             android:id="@+id/buttonOperadorIgual"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="="
-            android:textSize="@dimen/textSize_Operador"
+            android:layout_weight="2"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="="
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
