--- a/Calculadora/app/src/main/res/layout/activity_main.xml
+++ b/Calculadora/app/src/main/res/layout/activity_main.xml
@@ -63,27 +63,27 @@
 
         <Button
             android:id="@+id/buttonOperadorDivision"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorDivisio_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorDivisio_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorClear"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorClear_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorClear_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -130,27 +130,27 @@
 
         <Button
             android:id="@+id/buttonOperadorMultiplicacion"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorMultiplicacion_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorMultiplicacion_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorPotencia"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorExponente_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorExponente_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -197,27 +197,27 @@
 
         <Button
             android:id="@+id/buttonOperadorResta"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorRestar_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorRestar_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
         <Button
             android:id="@+id/buttonOperadorSuma"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="@string/buttonOperadorSumar_Text"
-            android:textSize="@dimen/textSize_Operador"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="@string/buttonOperadorSumar_Text"
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
@@ -240,39 +240,28 @@
 
         <Button
             android:id="@+id/buttonDigitoPunto"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="."
-            android:textSize="@dimen/textSize_Digito"
             android:background="@color/colorDigitos"
+            android:onClick="onClick"
+            android:text="."
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Digito" />
 
-        <Button
-            android:id="@+id/buttonRaiz"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="$"
-            android:textSize="@dimen/textSize_Digito"
-            android:background="@color/colodOperadores"
-            android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
 
         <Button
             android:id="@+id/buttonOperadorIgual"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="="
-            android:textSize="@dimen/textSize_Operador"
+            android:layout_weight="2"
             android:background="@color/colodOperadores"
+            android:onClick="onClick"
+            android:text="="
             android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            android:textSize="@dimen/textSize_Operador" />
 
     </LinearLayout>
 
